[package]
name = "finalizer"
version = "0.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
dialoguer = "0.10.0"
hex = "0.4.3"
subxt = "0.30.1"
tokio = { version = "1.21.2", features = ["full"] }
setheum_client = { path = "../../setheum-client" }
futures = "0.3.28"
