[package]
name = "setheum-primitives"
version = "0.9.81-dev"
authors = ["Setheum Labs"]
edition = "2021"

[dependencies]
bstringify = { workspace = true }
enumflags2 = { workspace = true, features = ["serde"] }
hex-literal = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true }
parity-scale-codec = { workspace = true, features = ["max-encoded-len"] }
paste = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"] }

sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-staking = { workspace = true }
sp-consensus-aura = { workspace = true }

frame-support = { workspace = true }

orml-traits = { workspace = true }

module-evm-utility = { workspace = true }
module-evm-utility-macro = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }


[features]
default = ["std"]
std = [
	"enumflags2/serde",
	"num_enum/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",

	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",

	"frame-support/std",

	"orml-traits/std",

	"module-evm-utility/std",
]
evm-tests = []
short_session = []
try-runtime = []
