[package]
name = "setheum-airdrop"
version = "0.7.1"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
# external dependencies
serde = { version = "1.0.124", optional = true }
codec = { default-features = false, package = "parity-scale-codec", version = "2.0.0" }

# Substrate dependencies
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
frame-support = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
frame-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }

# local dependencies
primitives = { package = "setheum-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
]
try-runtime = ["frame-support/try-runtime"]