[package]
name = "module-airdrop"
version = "0.9.6"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
primitives = { package = "setheum-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = "3.0.0"
sp-io = "3.0.0"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
]
