[package]
name = "setheum-auction-manager"
version = "0.7.9"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
orml-tokens = { path = "../../lib-orml/tokens", default-features = false }
orml-traits = { path = "../../lib-orml/traits", default-features = false }
orml-utilities = { path = "../../lib-orml/utilities", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
support = { package = "setheum-support", path = "../support", default-features = false }
primitives = { package = "setheum-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = "3.0.0"
pallet-balances = "3.0.0"
orml-auction = { path = "../../lib-orml/auction" }
serp-treasury = { package = "serp-treasury", path = "../serp-treasury" }
setheum-dex = { path = "../dex" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"orml-tokens/std",
	"orml-traits/std",
	"orml-utilities/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"support/std",
	"primitives/std",
]
