[package]
name = "auction-manager"
version = "0.9.80"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
orml-traits = { path = "../../open-lib/traits", default-features = false }
orml-utilities = { path = "../../open-lib/utilities", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
primitives = { package = "setheum-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.10" }
orml-auction = { path = "../../open-lib/auction" }
cdp-treasury = { package = "cdp-treasury", path = "../cdp-treasury" }
module-dex = { path = "../dex" }
orml-tokens = { path = "../../open-lib/tokens" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"orml-utilities/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"support/std",
	"primitives/std",
]