[package]
name = "cdp-engine"
version = "0.9.6"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { version = '3.0.0', default-features = false }
frame-system = { version = '3.0.0', default-features = false }
orml-traits = { path = "../../open-lib/traits", default-features = false }
orml-utilities = { path = "../../open-lib/utilities", default-features = false }
sp-application-crypto = { version = '3.0.0', default-features = false }
sp-io = { version = '3.0.0', default-features = false }
sp-runtime = { version = '3.0.0', default-features = false }
sp-std = { version = '3.0.0', default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
loans = { package = "module-loans", path = "../loans", default-features = false }
primitives = { package = "setheum-primitives", path = "../../primitives", default-features = false }
rand_chacha = { version = "0.2", default-features = false }

[dev-dependencies]
sp-core = { version = '3.0.0' }
pallet-balances = { version = '3.0.0' }
pallet-timestamp = { version = '3.0.0' }
orml-currencies = { path = "../../open-lib/currencies" }
module-dex = { path = "../dex" }
cdp-treasury = { package = "cdp-treasury", path = "../cdp-treasury" }
orml-tokens = { path = "../../open-lib/tokens" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"sp-application-crypto/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"support/std",
	"loans/std",
	"primitives/std",
	"orml-utilities/std",
]
