[package]
name = "cdp-treasury"
version = "0.9.6"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = '3.0.0', default-features = false }
frame-support = { version = '3.0.0', default-features = false }
frame-system = { version = '3.0.0', default-features = false }
sp-std = { version = '3.0.0', default-features = false }
orml-traits = { path = "../../open-lib/traits", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
primitives = { package = "setheum-primitives", path = "../../primitives", default-features = false }
frame-benchmarking = { version = "3.0.0", default-features = false, optional = true }

[dev-dependencies]
sp-core = '3.0.0'
sp-io = '3.0.0'
pallet-balances = '3.0.0'
orml-currencies = { path = "../../open-lib/currencies" }
orml-auction = { path = "../../open-lib/auction" }
module-dex = { path = "../dex" }
orml-tokens = { path = "../../open-lib/tokens" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"orml-traits/std",
	"support/std",
	"primitives/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
