[package]
name = 'slixon-channels'
version = '0.9.6'
authors = ["Setheum Labs"]
edition = '2018'

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'slixon-utils/std',
    'module-support/std',
    'slixon-permissions/std'
]

[dependencies]
impl-trait-for-tuples = '0.1.3'
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { features = ['derive'], optional = true, version = '1.0.119' }

# Local dependencies
module-support = { default-features = false, path = '../support' }
slixon-utils = { default-features = false, path = '../utils' }
slixon-permissions = { default-features = false, path = '../permissions' }

# Substrate dependencies
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
