[package]
name = "setheum-currencies"
version = "0.7.1"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
# external dependencies
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

# Substrate dependencies
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4"}
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4"}
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4"}
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4"}
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4"}
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4"}

# orml dependencies
orml-traits = { path = "../../lib-openrml/traits", version = "0.4.1-dev", default-features = false }
orml-utilities = { path = "../../lib-openrml/utilities", version = "0.4.1-dev", default-features = false }

# local dependencies
primitives = { package = "setheum-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4"}
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4"}
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4"}
tokens = { package = "orml-tokens", path = "../../lib-openrml/tokens", version = "0.4.1-dev" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"orml-utilities/std",
	"primitives/std",
	"support/std",
]
try-runtime = ["frame-support/try-runtime"]
