[package]
name = "module-currencies"
version = "1.0.0"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-core = { version = '3.0.0', default-features = false }
sp-runtime = { version = '3.0.0', default-features = false }
sp-io = { version = '3.0.0', default-features = false }
sp-std = { version = '3.0.0', default-features = false }
impl-trait-for-tuples = "0.1.3"

frame-support = { version = '3.0.0', default-features = false }
frame-system = { version = '3.0.0', default-features = false }

orml-traits = { path = "../../open-lib/traits", default-features = false }
orml-utilities = { path = "../../open-lib/utilities", default-features = false }

primitives = { package = "setheum-primitives", path = "../../primitives", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }

[dev-dependencies]
sp-core = { version = '3.0.0' }
pallet-balances = { version = '3.0.0' }
pallet-timestamp = { version = '3.0.0' }
tokens = { package = "orml-tokens", path = "../../open-lib/tokens" }
module-evm = { path = "../evm" }
module-evm-bridge = { path = "../evm-bridge" }

clear_on_drop = { version = "0.2.4", features = ["no_cc"] }	# https://github.com/paritytech/substrate/issues/4179

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"orml-utilities/std",
	"primitives/std",
	"support/std",
]
