[package]
name = "module-dex"
version = "0.9.1"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
max-encoded-len = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5", default-features = false }
sp-core = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5", default-features = false }
sp-runtime = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5", default-features = false }
frame-benchmarking = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5", default-features = false, optional = true }
frame-support = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5", default-features = false }
frame-system = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5", default-features = false }
sp-std = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5", default-features = false }
orml-traits = { path = "../../lib-open/traits", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
primitives = { package = "setheum-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
orml-tokens = { path = "../../lib-open/tokens" }
sp-core = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
sp-io = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }
pallet-balances = { git = "https://github.com/Slixon-Technologies/substrate", branch = "setheum-v0.9.5" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"orml-traits/std",
	"orml-tokens/std",
	"support/std",
	"primitives/std",
	"frame-benchmarking/std",
]
try-runtime = ["frame-support/try-runtime"]
