[package]
name = 'slixon-donations'
version = '0.9.6'
authors = ["Setheum Labs"]
edition = '2018'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'slixon-permissions/std',
    'slixon-posts/std',
    'slixon-channels/std',
    'slixon-utils/std',
]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

# Local dependencies
slixon-permissions = { default-features = false, path = '../permissions' }
slixon-posts = { default-features = false, path = '../posts' }
slixon-channels = { default-features = false, path = '../channels' }
slixon-utils = { default-features = false, path = '../utils' }

# Substrate dependencies
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
