[package]
name = "setheum-emergency-shutdown"
version = "0.7.9"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
orml-tokens = { path = "../../lib-orml/tokens", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
support = { package = "setheum-support", path = "../support", default-features = false }
setters = { package = "setheum-setters", path = "../setters", default-features = false }
primitives = { package = "setheum-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = "3.0.0"
sp-io = "3.0.0"
pallet-balances= "3.0.0"
orml-currencies = { path = "../../lib-orml/currencies" }
orml-traits = { path = "../../lib-orml/traits" }
serp-treasury = { package = "serp-treasury", path = "../serp-treasury" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"orml-tokens/std",
	"sp-runtime/std",
	"sp-std/std",
	"support/std",
	"setters/std",
	"primitives/std",
]
