[package]
name = "module-evm-accounts"
version = "1.0.0"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
libsecp256k1 = { version = "0.6", default-features = false, features = ["hmac"] }

frame-support = { git = "https://github.com/Slixon-Technologies/substrate", branch = "newrome-0.9.6", default-features = false }
frame-system = { git = "https://github.com/Slixon-Technologies/substrate", branch = "newrome-0.9.6", default-features = false }
sp-core = { git = "https://github.com/Slixon-Technologies/substrate", branch = "newrome-0.9.6", default-features = false }
sp-io = { git = "https://github.com/Slixon-Technologies/substrate", branch = "newrome-0.9.6", default-features = false }
sp-runtime = { git = "https://github.com/Slixon-Technologies/substrate", branch = "newrome-0.9.6", default-features = false }
sp-std = { git = "https://github.com/Slixon-Technologies/substrate", branch = "newrome-0.9.6", default-features = false }

orml-traits = { path = "../../open-lib/traits", default-features = false }

primitives = { package = "setheum-primitives", path = "../../primitives", default-features = false }
module-support = { path = "../support", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/Slixon-Technologies/substrate", branch = "newrome-0.9.6" }
orml-currencies = { path = "../../open-lib/currencies" }
orml-tokens = { path = "../../open-lib/tokens" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"libsecp256k1/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
	"orml-traits/std",
	"module-support/std",
]
