[package]
name = "module-evm-bridge"
version = "0.9.6"
authors = ["Setheum Labs"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.124", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { version = '3.0.0', default-features = false }
frame-system = { version = '3.0.0', default-features = false }
sp-core = { version = '3.0.0', default-features = false }
sp-runtime = { version = '3.0.0', default-features = false }
sp-std = { version = '3.0.0', default-features = false }
sp-io = { version = '3.0.0', default-features = false }
primitive-types = { version = "0.9.0", default-features = false, features = ["rlp", "byteorder"] }
impl-trait-for-tuples = "0.2.1"
ethereum-types = { version = "0.11.0", default-features = false }
primitives = { package = "setheum-primitives", path = "../../primitives", default-features = false }
primitives-proc-macro = { path = "../../primitives/proc-macro" }
support = { package = "module-support", path = "../support", default-features = false }
module-evm = { path = "../evm", default-features = false }
num_enum = { version = "0.5.1", default-features = false }

[dev-dependencies]
sha3 = { version = "0.9.1" }
pallet-balances = { version = '3.0.0' }
pallet-timestamp = { version = '3.0.0' }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-std/std",
	"ethereum-types/std",
	"primitives/std",
	"primitive-types/std",
	"support/std",
	"module-evm/std",
]
