[package]
name = "module-evm-manager"
version = "1.0.0"
authors = ["Setheum Labs"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

frame-support = { version = '3.0.0', default-features = false }
frame-system = { version = '3.0.0', default-features = false }
sp-core = { version = '3.0.0', default-features = false }
sp-io = { version = '3.0.0', default-features = false }
sp-runtime = { version = '3.0.0', default-features = false }
sp-std = { version = '3.0.0', default-features = false }

primitives = { package = "setheum-primitives", path = "../../primitives", default-features = false }
module-support = { path = "../support", default-features = false }

[dev-dependencies]
pallet-balances = { version = '3.0.0' }
pallet-timestamp = { version = '3.0.0' }
orml-currencies = { path = "../../open-lib/currencies" }
orml-tokens = { path = "../../open-lib/tokens" }
orml-traits = { path = "../../open-lib/traits" }
orml-utilities = { path = "../../open-lib/utilities" }
module-evm = { path = "../evm" }
module-evm-bridge = { path = "../evm-bridge" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
	"module-support/std",
]
